client/charts/web/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: client-nodeport
spec:
  type: NodePort
  ports:
    - name: http
      protocol: TCP
      targetPort: 3000
